fix body overflow x

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,6 +8,7 @@
 
 body {
   background-color: rgb(20,20,20);
+  overflow-x: hidden;
   color: white;
 }
 
